[project]
name = "azure-uv-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.11.0",
    "fastapi>=0.104.0",
    "httpx>=0.28.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "mcp[cli]>=1.11.0",
    "openai>=1.95.1",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.24.0",
    "wikibaseintegrator>=0.12.0",
]
